# owlisp

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  make.lisp  make.lisp.in  owlisp.asd  packages.lisp  packages.test.lisp
doc/: ssa
etc/: owlisp.cfg.in
owlisp-ng/: README.txt  cdumper.lisp  compiler.lisp  environment.lisp  owlisp.asd  package.lisp
src/: compiler.lisp  owlisp.lisp
src/analyzer/: analyzer.lisp  applier.lisp  builtin-macros.lisp  closure.lisp  cps.lisp  cps.lisp.old  environmentalize.lisp  interpreter.lisp  macroexpand-all.lisp  macroexpansion.lisp  objects.lisp  parameters.lisp  predicates.lisp  simplify.lisp  symboltable.lisp  transform.lisp
src/cfg/: def-use-chain.lisp  graph.lisp
src/compiler/: applier.lisp  compiler.lisp
src/compiler/llvm-ir/: builtins.lisp  common.lisp  globals.lisp  ir-generator.lisp  llvm-ir-adapter-syntax.lisp  llvm-ir-adapter.lisp  llvm-ir.lisp
src/compiler/llvm-ir/cffi/: Makefile  llvmcffi.lisp  loader.lisp  swig.i
src/compiler/llvm-ir/typesystem/: typesystem.lisp
src/compiler/parrot/: instructions.lisp
src/compilerc/: main.c
src/crt/: CMakeLists.txt  arecord.c  arecord.h  error.h  frame.c  frame.h  gc.c  gc.h  loader.lisp  runtime_api_high.lisp  swig.i  types.c
src/crt-ng/: CMakeLists.txt  binding.c  binding.h  environment.c  environment.h  procedure.c  procedure.h  type.h  value.c  value.h
src/crt-ng2/: CMakeLists  CMakeLists.txt  classes.c  classes.h  config.h.in  constant.h  env.c  env.h  invocation.c  invocation.h  list.c  list.h  main.c  math_basic.c  math_basic.h  owlisprt.h  print.c  print.h  test.c  trampoline.c  value.h
src/crt-ng2/include/owlisp/: classes.h  config.h  env.h  invocation.h  list.h  math_basic.h  owlisprt.h  print.h  trampoline.h
src/crt-ng2/testbed/: values.c  values2.c  values3.c
src/ctarget/: abstraction.lisp  dumper.lisp  objects.lisp  restructure.lisp  walker.lisp
src/environment/: arecord.lisp  binding.lisp  declarative.lisp  environment.lisp
src/environment-ng/: compiletime.lisp
src/evaluator/: builtins.lisp  environment.lisp  evaluator.lisp
src/helper/: buffer.lisp  codewalker.lisp  defun.lisp  gensyms.lisp  let.lisp  macroexpand-all.lisp  message-passing.lisp  sequences.lisp  symbols.lisp  syntax-funcalls.lisp  tree.lisp
src/interpreter/: interpreter.lisp
src/interpreterc/: main.c
src/interpreterc/lexyacc/: Makefile  lexer.l  parser.h  yacc.y
src/llvm/: globals.lisp  llvm-ir.lisp  llvm.lisp  runtime.lisp
src/llvm/cffi/: CMakeLists.txt  Makefile  llvm_api_high.lisp  llvm_api_low.lisp  loader.lisp  loader.lisp.in  swig.i
src/llvm/crt/: CMakeLists.txt  Makefile  error.ll  frame.c  frame.ll  loader.lisp  runtime.h  runtime.ll  runtime_api_low.lisp  swig.i  types.c  types.h  types.ll
src/machines/: machines.lisp  register.lisp  secd.lisp
src/obsolete/: compiler.lisp  globals.lisp  llvm-ir-adapter.lisp
src/obsolete/cfg/: graph.lisp
src/obsolete/machines/: machines.lisp  register.lisp  secd.lisp  target-compilation.lisp
src/registermachine/: instructions.lisp
src/runtime/llvm/: Makefile  error.c  error.h  frame.c  frame.h  loader.lisp  runtime.lisp  runtime_api.lisp  swig.i  test.c  types.c  types.h
tests/: Makefile  compileme-lambdaif.lisp  compileme.lisp  compiler.lisp  environment.lisp  evaluator.lisp  machines.lisp  register.lisp  restructure.lisp
toolchain/: owlisp  owlisp.in  owlisp.sh
